<resources>
    <string name="app_name">Smart-shopping-list-app</string>
    <string name="last_list">Ostatnia lista</string>
    <string name="all_lists">Wszystkie listy</string>
    <string name="Hello">Hello</string>
    <string name="title_activity_single_list">SingleList</string>
    <string name="delete">Usuń</string>
    <string name="undo">Cofnij</string>
    <string name="title_activity_start">StartActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="all_shopping_lists">All shopping lists</string>
    <string name="create_new_shopping_list">Create new shopping list</string>
    <string name="add_new_group">Add new group</string>
    <string name="settings">Settings</string>
    <string name="last_used_list">Last used list</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="next_item">Next item</string>
    <string name="that_s_all">That\'s all</string>
    <string name="amount">Amount</string>
    <string name="name">Name</string>
    <string name="add">Add</string>
    <string name="create_list">Create list</string>
    <string name="groups_of_products">Groups of products</string>
    <string name="create_group">Create group</string>
    <string name="register">Register!</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign Up</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="minimum_password">Password is too short.</string>
    <string name="password">Password</string>
    <string name="e_mail">E-mail</string>
    <string name="zaloguj">Zaloguj</string>
    <string name="your_shopping_lists">Your shopping lists</string>
    <string name="your_groups">Your groups</string>
    <string name="select_group">Select group</string>
    <string name="share_list">Share list</string>
    <string name="use_list_again">Use list again</string>
    <string name="refresh_list">Refresh list</string>
    <string name="save_as_group">Save as group</string>
    <string name="smart_shopping_list">Smart shopping list</string>
    <string name="lack">Lack</string>
    <string name="bought">Bought</string>
    <string name="remove">Remove</string>
</resources>
